--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
       id: create_release
       uses: softprops/action-gh-release@v1
       with:
-        name: Release ${{ github.sha }}
+        name: Release ${{ github.run_number }}
         tag_name: v${{ github.run_number }}
         files: artifacts/*
         generate_release_notes: true
