--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,10 @@ jobs:
 
     - name: configure CMake
       run: |
-        cmake -S . -B build -G "Ninja" -DCMAKE_BUILD_TYPE=Release
+        cmake -S . -B build -G "Ninja" -DCMAKE_BUILD_TYPE=Debug
 
     - name: build
-      run: cmake --build build --config Release
+      run: cmake --build build --config Debug
 
     - name: prepare artifacts
       run: |
